# rustream

./: .gitignore  Cargo.toml  README.md  build_instructions.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml  release.yml
examples/production-template/: README.md  config.example.yaml  docker-compose.yml
examples/production-template/helm/: Chart.yaml  values.yaml
examples/production-template/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
examples/production-template/terraform/: main.tf
src/: catalog.rs  config.rs  iceberg.rs  ingest.rs  input.rs  jobs.rs  main.rs  output.rs  pg_writer.rs  reader.rs  schema.rs  state.rs  status_api.rs  sync.rs  types.rs  writer.rs
