[package]
name = "rustream"
version = "0.1.0"
edition = "2021"
description = "Fast Postgres → Parquet sync tool"
license = "MIT"

[[bin]]
name = "rustream"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Postgres
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }

# Arrow / Parquet
arrow = { version = "53", features = ["chrono-tz"] }
parquet = { version = "53", features = ["arrow"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# State tracking
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
bytes = "1"
