[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustream"
version = "0.1.2"
description = "Fast Postgres → Parquet sync tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["postgres", "parquet", "s3", "sync", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true

[project.urls]
Repository = "https://github.com/kraftaa/rustream"
